started working on spell/power calculations, separated hp and special battle bursts, also fixed issues:
- improved empty battle text area for one frame
- if party member atacks another party member, the first party member shouldn't be able to block
- fix issue if party member attacks another party member, soft lock occurs on next party member's turn
- fixed crash when battle text area is clicked and text hasn't been initialized

--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -1,5 +1,6 @@
 
-preparing for spells
+
+apply spell and don't lock up
 using an item animation will walk forward, turn around and show single frame animation (ITEM_LEFT, ITEM_RIGHT)
 LCK and AVO for ranged and melee attacks.
 show MISS or CRIT! animation with number
