--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -3,6 +3,6 @@
 apply spell effect list
 using an item animation will walk forward, turn around and show single frame animation (ITEM_LEFT, ITEM_RIGHT)
 LCK and AVO for ranged and melee attacks.
-calculate and show MISS hit - and don't lock up
 when using an item or attack on another party member, animation direction needs to change
 also, when using an attack on self... what to do?
+miss animation
