--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -5,4 +5,6 @@ using an item animation will walk forward, turn around and show single frame ani
 LCK and AVO for ranged and melee attacks.
 when using an item or attack on another party member, animation direction needs to change
 also, when using an attack on self... what to do?
-miss animation
+
+Done:
+miss animation against ally
