updates for setting, using, and saving weapon, fixed multiple playerHUD issue, fixed inventory HUD scrolling  issue

--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -5,9 +5,10 @@ apply spell effect list
 using an item animation will walk forward, turn around and show single frame animation (ITEM_LEFT, ITEM_RIGHT)
 
 On Android, how to allow inventory item at bottom of list to be swapped with one at top, using scrolling
-Fix issue with not being able to scroll to bottom of items if they were added after initial inventory display
 
 
 
-save selected weapon to profile
-keep track of availble weapons
+handle if character doesn't have a weapon (default to punch?)
+if equipping to character that already has a weapon, should the previous weapon be put back in the inventory?
+can character block if they don't have a weapon?
+how to assign weapon to enemy?
