--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -14,3 +14,5 @@ can character block if they don't have a weapon? only with blunt weapons
 how to assign weapon to enemy? set preferred weapon type (e.g., SWORD) in json file.
   before every battle, determine chance of getting preferred weapon type. If got preferred weapon type, randomly choose type (e.g., SWORD1-5).
   If not get preferred weapon type, randomly choose other weapon. some enemies won't have weapon (preferred weapon NONE).
+  
+  should NONE be included in the random weapon type choosing?
