--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -6,9 +6,8 @@ using an item animation will walk forward, turn around and show single frame ani
 
 On Android, how to allow inventory item at bottom of list to be swapped with one at top, using scrolling
 
-
 test stopUsingItem
 handle if character doesn't have a weapon: default to KNUCKLE
 if equipping to character that already has a weapon, the previous weapon just be put back in the inventory
 
-  
+Allow game play after coming out of cutscene - requires spawning in correct location
