--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -11,3 +11,5 @@ handle if character doesn't have a weapon: default to KNUCKLE
 if equipping to character that already has a weapon, the previous weapon just be put back in the inventory
 
 Allow game play after coming out of cutscene - requires spawning in correct location
+
+Only write certain cutscene status to profile
