--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -13,3 +13,5 @@ if equipping to character that already has a weapon, the previous weapon just be
 Allow game play after coming out of cutscene - requires spawning in correct location
 
 Only write certain cutscene status to profile
+
+Add weapon to inventory when selected from chapter 2 cut scene
