--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -15,3 +15,19 @@ Allow game play after coming out of cutscene - requires spawning in correct loca
 Only write certain cutscene status to profile
 
 Add weapon to inventory when selected from chapter 2 cut scene
+
+Move functions/variables to CutSceneBase:
+followActor
+setCameraPosition
+currentPartNumber
+baseResize
+basePause
+baseResume
+baseDispose
+
+Remove from CutSceneBase:
+_player
+
+Remove from inherited cut scenes:
+setGameState(GameState.LOADING);
+Gdx.input.setInputProcessor ?
